--- a/src/nextjs/ml-app/package.json
+++ b/src/nextjs/ml-app/package.json
@@ -11,5 +11,10 @@
     "react-dom": "18.2.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
