--- a/src/nextjs/ml-app/package.json
+++ b/src/nextjs/ml-app/package.json
@@ -6,9 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^9.18.0",
+    "firebaseui": "^6.0.2",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebaseui": "^6.0.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1"
   },
